WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257956
MediaStream from canvas (captureStream) cannot be rendered into a different canvas
https://bugs.webkit.org/show_bug.cgi?id=257956
Summary
MediaStream from canvas (captureStream) cannot be rendered into a different c...
Simon Leber
Reported
2023-06-12 08:02:40 PDT
The Mediastream returned from a canvas captureStream call can not be used to be rendered into another canvas using drawImage (2d context) or createImageBitmap/transferFromImageBitmap (bitmaprenderer context) The following CodePen shows the problem in a short example.
https://codepen.io/sleb91/pen/bGQdPxq
I have tested on Safari on Mac (Version 16.5 (18615.2.9.11.4)) and latest IOS Safari (16.5)
Attachments
Reproduction
(1.35 KB, text/html)
2023-06-12 08:40 PDT
,
Sébastien Roch
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Sébastien Roch
Comment 1
2023-06-12 08:40:42 PDT
Created
attachment 466670
[details]
Reproduction Attached reproduction as simple HTML file.
Radar WebKit Bug Importer
Comment 2
2023-06-13 01:33:37 PDT
<
rdar://problem/110696945
>
youenn fablet
Comment 3
2023-06-13 01:36:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14910
EWS
Comment 4
2023-06-13 11:40:31 PDT
Committed
265128@main
(e7326a948d62): <
https://commits.webkit.org/265128@main
> Reviewed commits have been landed. Closing PR #14910 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug