MediaStream from canvas (captureStream) cannot be rendered into a different canvas https://bugs.webkit.org/show_bug.cgi?id=257956 rdar://110696945

Reviewed by Eric Carlson.

When painting a BGRA video into a canvas, we do not need to convert the video frame.
Our code path would return null and we would bail out.
Instead, we are now skipping the convert step.

* LayoutTests/fast/mediastream/canvas-video-to-canvas-expected.html: Added.
* LayoutTests/fast/mediastream/canvas-video-to-canvas.html: Added.
* Source/WebKit/GPUProcess/media/RemoteVideoFrameObjectHeap.cpp:
(WebKit::RemoteVideoFrameObjectHeap::convertFrameBuffer):

Canonical link: https://commits.webkit.org/265128@main